--- a/balatongyorok.html
+++ b/balatongyorok.html
@@ -1,99 +1,100 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="balatongyorok.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balatongyörök kilátói</title>
+     <meta charset="utf-8">
+     <title>Balatongyörök kilátói</title>
+     <link rel="stylesheet" href="balatongyorok.css">
 </head>
 
 <body>
-    <div class="content">
-        <div class="header">
-            <header>
-                <h1>Balatongyörök kilátói</h1>
-                <div class="header_img">
-                    <img src="cimer.jpg" alt="Címer" class="head_img">
-                </div>
-            </header>
-        </div>
-        <p class="bold">Balatongyörökön szebbnél-szebb helyszíneken 2 kilátó is várja a turistákat.</p>
-        <div class="box" id="1">
-            <h2>Batsányi kilátó</h2>
-            <table>
-                <tr>
-                    <th colspan="2">
-                        <p>A Pap-hegy csúcsán, az úgynevezett Boncsostetőn található a kilátó, ahonnan páratlan panoráma
-                            nyílik a
-                            Balaton-felvidékre. 2003-ban a Keszthelyi erdészet rendbe hozta a korábban megrongált
-                            kilátót.
-                            Megközelíthető a Bélapi pihenőtől vagy a Szépkilátótól a Szerelemdombon keresztül. Vagy a
-                            Szépkilátótól
-                            induló piros háromszög jelzésen is.</p>
-                    </th>
-                </tr>
-                <tr>
-                    <th>Szélesség</th>
-                    <td>N 46.77717°</td>
-                </tr>
-                <tr>
+     <div class="keret">
+          <div class="header">
+               <div class="cimerkep"><img src="cimer.jpg"></div>
+               <h1>Balatongyörök kilátói</h1>
 
-                </tr>
-                <tr>
-                    <th>Hosszúság</th>
-                    <td>E 17.35715°</td>
-                </tr>
-                <tr>
-                    <th>Magasság</th>
-                    <td>448 m</td>
-                </tr>
-                <tr>
-                    <th>Megye/ország</th>
-                    <td>Zala</td>
-                </tr>
-                <tr>
-                    <th>Hegy</th>
-                    <td>Pap-hegy</td>
-                </tr>
-            </table>
-            <p>Forrás: <a href="http://hazaielmenyek.hu/latnivalo/balatongyorok/batsanyi-kilato-i11024" target="_blank"
-                    rel="noopener noreferrer">hazaielmenyek.hu</a></p>
-        </div>
-        <div class="box" id="2">
-            <h2>Bél Mátyás kilátó </h2>
-            <table>
-                <tr>
-                    <th colspan="2"><p>A Garga-hegy tetején található kilátó 1972-ben épült, a keszthelyi erdészet építette. A kilátó kitűnő
-                        panorámát nyújt a Tapolcai-medence tanúhegyeire. Ugyancsak kiváló a kilátás a Keszthelyi hegység
-                        dimbes-dombos hegyvonulataira, a somogyi partokra, a keszthelyi öbölre. A Keszthelyi-hegység fái között
-                        található kilátó környékén egyedi növény-és állatvilág található.</p></th>
-                </tr>
-                <tr>
-                    <th>Szélesség</th>
-                    <td>N 46.76855°</td>
-                </tr>
-                <tr>
-                    <th>Hosszúság</th>
-                    <td>E 17.35227°</td>
-                </tr>
-                <tr>
-                    <th>Magasság</th>
-                    <td>221 m</td>
-                </tr>
-                <tr>
-                    <th>Megye/ország</th>
-                    <td>Zala</td>
-                </tr>
-                <tr>
-                    <th>Hegy</th>
-                    <td>Garga-hegy</td>
-                </tr>
-            </table>
+          </div>
+          <p class="bekezdes">Balatongyörökön szebbnél-szebb helyszíneken 2 kilátó is várja a turistákat.</p>
+          <div class="bal">
+               <h2>Batsányi kilátó </h2>
 
-            <p>Forrás: <a href="http://hazaielmenyek.hu/latnivalo/balatongyorok/bel-matyas-kilato-i3761" target="_blank" rel="noopener noreferrer">hazaielmenyek.hu</a></p>
-        </div>
+               <table class="tablazat">
+                    <tr>
+                         <td class="felkover" colspan="2">
+                              <p>A Pap-hegy csúcsán, az úgynevezett Boncsostetőn található a kilátó, ahonnan páratlan
+                                   panoráma nyílik a Balaton-felvidékre. 2003-ban a Keszthelyi erdészet rendbe hozta a
+                                   korábban megrongált kilátót. Megközelíthető a Bélapi pihenőtől vagy a Szépkilátótól a
+                                   Szerelemdombon keresztül. Vagy a Szépkilátótól induló piros háromszög jelzésen is.
+                              </p>
+                         </td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Szélesség</td>
+                         <td>N 46.77717&deg</td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Hosszúság</td>
+                         <td>E 17.35715&deg</td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Magasság</td>
+                         <td>448 m</td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Megye/ország</td>
+                         <td>Zala</td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Hegy</td>
+                         <td>Pap-hegy</td>
+                    </tr>
+               </table>
+               Forrás: <a href="http://hazaielmenyek.hu/latnivalo/balatongyorok/batsanyi-kilato-i11024"
+                    target="_blank">hazaielmenyek.hu</a>
+
+          </div>
+          <div class="jobb">
+               <h2>Bél Mátyás kilátó</h2>
+
+               <table class="tablazat">
+                    <tr>
+                         <td class="felkover" colspan="2">
+                              <p>A Garga-hegy tetején található kilátó 1972-ben épült, a keszthelyi erdészet építette. A
+                                   kilátó kitűnő panorámát nyújt a Tapolcai-medence tanúhegyeire. Ugyancsak kiváló a
+                                   kilátás a Keszthelyi hegység dimbes-dombos hegyvonulataira, a somogyi partokra, a
+                                   keszthelyi öbölre. A Keszthelyi-hegység fái között található kilátó környékén egyedi
+                                   növény-és állatvilág található. </p>
+                         </td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Szélesség</td>
+                         <td>N 46.76855&deg</td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Hosszúság</td>
+                         <td>E 17.35227&deg</td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Magasság</td>
+                         <td>221 m</td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Megye/ország</td>
+                         <td>Zala</td>
+                    </tr>
+                    <tr>
+                         <td class="felkover">Hegy</td>
+                         <td>Garga-hegy</td>
+                    </tr>
+               </table>
+               Forrás: <a href="http://hazaielmenyek.hu/latnivalo/balatongyorok/bel-matyas-kilato-i3761"
+                    target="_blank">hazaielmenyek.hu</a>
+
+          </div>
+     </div>
+
+
+
 </body>
-</div>
 
 </html>
